--- a/.github/workflows/combine-ublock-scripts.yml
+++ b/.github/workflows/combine-ublock-scripts.yml
@@ -44,4 +44,4 @@ jobs:
           git config user.email "github-actions@users.noreply.github.com"
           git add ublock-scripts.js
           git commit -m "Auto-update combined uBlock script" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.ACTION_TOKEN }}@github.com/${{ github.repository }} HEAD:main
